--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,42 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  font-family: 'Lato', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  padding: 60px;
+}
+.header {
+  margin: 5px 0  5px 30px
+}
+h2 {
+  font-family: 'Poppins', sans-serif;
+  font-weight: bold;
+  /* margin-left: 30px; */
+}
+
+input {
+  font-size: 1.2rem;
+  color: grey;
+  margin-bottom: 15px;
+  width: 60%;
+}
+.card-grid {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+.card {
+  align-tracks: center;
+  /* border: 1px solid grey; */
+  margin: 0 10px 10px 0;
+  overflow: hidden;
+  max-width: 200px;
+}
+.card p {
+  padding: 5px;
+  text-align: center;
+}
+.card img {
+  max-height: 170px;
+  width: auto;
 }
